fix boost alignement style

--- a/src/components/FindEgg/findegg.scss
+++ b/src/components/FindEgg/findegg.scss
@@ -25,6 +25,7 @@
       }
       .cta-hidden {
         visibility: hidden;
+        width: 90px;
       }
     }
   }
